--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,11 @@ ul
 {
     list-style-type: none;
 }
+/*-------------TITLE CONFIGURATION-------------*/
+h1{
+    text-transform: uppercase;
+    text-align: center;
+}
 
 button
 {
@@ -18,8 +23,8 @@ button
     height: 43px;
     text-align: center;
     color: #000;
-    background: #444;
-    background: linear-gradient(#83a7c5, #7697b3);
+    background: #e1fbfc;
+
     border-radius: 8px;
     text-shadow: 0px 1px 0px rgba( 255, 255, 255, 0.2);
     box-shadow: 0 0 5px rgba( 0, 0, 0, 0.5),
@@ -28,18 +33,20 @@ button
 button:hover
 {
     color: #222;
-     background: #555;
-     background: linear-gradient( #98c3e6, #51708a);
+     background: #e1fbfc;
+
 }
 button:active
 {
     color: #000;
-     background: #444;
-     background: linear-gradient( #83a7c5, #7697b3);
+     background: #e1fbfc;
+
      box-shadow: 1px 1px 10px black inset, 
                  0 1px 0 rgba( 255, 255, 255, 0.4);
 }
-
+button a{
+    color: black;
+}
 body
 {
     background-color: #5e5e5e;
@@ -64,21 +71,40 @@ header
 #content
 {
     margin-top: 100px;
-}
-#showChapter
-{
-    display: flex;
-}
-
-.partOfChapter, .chapter
-{
-    background-color: #98c3e6;
-    margin: 8px;
-    padding: 8px;
     text-align: center;
-    border-radius: 0px 20px 0px 20px;
 }
 
+table{
+    margin: 0 auto;
+}
+
+.tdAlign{
+    text-align: right;
+}
+/*-------------TEMPLATE-------------*/
+.menuMember{
+    display: none;
+    background-color: #403d3d;
+    margin-left: 30px;
+    margin-top: 10px;
+    padding: 0px 15px 15px 15px;
+    border-radius: 6px;
+}
+.menuMember li{
+    padding-top: 10px;
+}
+.triangle{
+    width: 0;
+    height: 0;
+    border: 0 solid transparent;
+    border-right-width: 7px;
+    border-left-width: 7px;
+    border-top: 10px solid #000;
+    margin-left: 161px;
+    margin-top: -16px;
+}
+
+/*-------------HEADER-------------*/
 .logoHeader
 {
     height: 120px;
@@ -90,7 +116,7 @@ header
     width: 40%;
 }
 
-.nav-header ul
+.nav-header > ul
 {
     display: flex;
     justify-content: space-between;
@@ -104,16 +130,68 @@ header
    font-size: 1.3em;
 }
 
+/*-------------HOME PAGE-------------*/
+#lastChapitre{
+
+    margin: 30px 0px 30px 0px;
+}
+#bio{
+    border-top-style: double;
+    border-bottom-style: double;
+    border-top-width: 6px;
+    border-bottom-width: 6px;
+    margin: 30px 20% 30px 20%;
+}
+#showChapter
+{
+    display: flex;
+}
+.partOfChapter, .chapter, .navChapter
+{
+    background-color: #e1fbfc;
+    margin: 8px;
+    padding: 8px;
+    border-radius: 0px 20px 0px 20px;
+}
 .sliderPicture
 {
     width: 100%;
 }
 
-#bio
-{
-    text-align: center;
+/*-------------PAGE BOOK-------------*/
+#showChapterBook{
+    display: flex;
+    height: 1000px;
+}
+.completText{
+    text-align: justify;
+}
+.chapter{
+    width: 80%;
+}
+.navChapter{
+    width: 20%;
+    overflow: auto;
 }
 
+.navChapter h4{
+    border-top-style: solid;
+    border-top-width: 3px;
+    padding-top: 12px;
+}
+.navChapter a{
+    color : black;
+    text-decoration: none;
+}
+
+.connexionForm{
+    padding: 50px 0px 50px 0px;
+}
+.connexionForm div{
+    padding-top: 10px;
+}
+
+/*-------------FOOTER-------------*/
 footer
 {
     background-color: #4e4e4e;
@@ -126,9 +204,14 @@ footer
     justify-content: space-around;
 }
 
-
-
 .copyright
 {
     text-align: center;
+}
+
+/*-------------PAGE ERROR-------------*/
+.error{
+    font-size: x-large;
+    text-transform: uppercase;
+    padding-top: 24px;
 }
