--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,20 +67,35 @@ header
     height: 100px;
     background-color: #4e4e4e;
 }
-
+/*-------------CONTENT-------------*/
 #content
 {
     margin-top: 100px;
     text-align: center;
 }
+.warningMessage{
+    font-size: x-large;
+    font-weight: bold;
+    color: darkred;
 
-table{
+}
+
+/*-------------FORMULAIRE-------------*/
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 25%;
+    margin-left: 35%;
+}
+.formSubmit{
     margin: 0 auto;
+    padding: 10px 0px 10px 0px;
+}
+.field{
+    padding: 10px 0px 10px 0px;
 }
 
-.tdAlign{
-    text-align: right;
-}
 /*-------------TEMPLATE-------------*/
 .menuMember{
     display: none;
