--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ button
     height: 43px;
     text-align: center;
     color: #000;
-    background: #e1fbfc;
+    background: #CD853F;
 
     border-radius: 8px;
     text-shadow: 0px 1px 0px rgba( 255, 255, 255, 0.2);
@@ -33,13 +33,13 @@ button
 button:hover
 {
     color: #222;
-     background: #e1fbfc;
+     background: #CD853F;
 
 }
 button:active
 {
     color: #000;
-     background: #e1fbfc;
+     background: #CD853F;
 
      box-shadow: 1px 1px 10px black inset, 
                  0 1px 0 rgba( 255, 255, 255, 0.4);
@@ -66,10 +66,13 @@ header
     width: 100%;
     height: 100px;
     background-color: #4e4e4e;
+    z-index: 100;
 }
 /*-------------CONTENT-------------*/
 #content
 {
+    display: flex;
+    flex-direction: column;
     margin-top: 100px;
     text-align: center;
 }
@@ -107,6 +110,10 @@ header
 }
 .menuMember li{
     padding-top: 10px;
+
+}
+.nav-header >ul >li {
+    padding-right: 15px;
 }
 .triangle{
     width: 0;
@@ -115,8 +122,7 @@ header
     border-right-width: 7px;
     border-left-width: 7px;
     border-top: 10px solid #000;
-    margin-left: 161px;
-    margin-top: -16px;
+    margin-top: 10px;
 }
 
 /*-------------HEADER-------------*/
@@ -134,7 +140,6 @@ header
 .nav-header > ul
 {
     display: flex;
-    justify-content: space-between;
     padding-top: 20px;
 }
 
@@ -146,6 +151,27 @@ header
 }
 
 /*-------------HOME PAGE-------------*/
+#slider{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+
+}
+#instruction
+{
+    position: absolute;
+    height: auto;
+    margin-top: 250px;
+    margin-right: auto;
+    background-color: #a3a2a2;
+    padding: 0px 10px;
+    border-radius: 10px;
+    border:2px solid #ccc;
+    width: 500px;
+    opacity: 90%;
+    font-size: 50px;
+}
 #lastChapitre{
 
     margin: 30px 0px 30px 0px;
@@ -163,14 +189,10 @@ header
 }
 .partOfChapter, .chapter, .navChapter
 {
-    background-color: #e1fbfc;
+    background-color: #DEB887;
     margin: 8px;
     padding: 8px;
     border-radius: 0px 20px 0px 20px;
-}
-.sliderPicture
-{
-    width: 100%;
 }
 
 /*-------------PAGE BOOK-------------*/
@@ -209,6 +231,7 @@ header
 /*-------------FOOTER-------------*/
 footer
 {
+    display: flex;
     background-color: #4e4e4e;
     position: absolute;
 }
