--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,6 @@ button
     text-align: center;
     color: #000;
     background: #CD853F;
-
     border-radius: 8px;
     text-shadow: 0px 1px 0px rgba( 255, 255, 255, 0.2);
     box-shadow: 0 0 5px rgba( 0, 0, 0, 0.5),
@@ -227,7 +226,39 @@ header
 .connexionForm div{
     padding-top: 10px;
 }
+#commentaire{
+    width: 40%;
+    margin: 0 auto;
+}
+#commentaire a{
+    color: darkred;
+}
+.containsComments{
+    border-top: 2px solid #a3a2a2;
+  
+}
 
+/*-------------ADMINISTRATION PAGE-------------*/
+#administration{
+    background-color: whitesmoke;
+}
+
+table{
+    width: 100%;
+    border-collapse: collapse;
+}
+table a{
+    text-decoration: none;
+}
+table button{
+    background-color: #a3a2a2;
+}
+table button:hover{
+    background-color: darkred;
+}
+th, td{
+    border-top: 2px solid #a3a2a2;
+}
 /*-------------FOOTER-------------*/
 footer
 {
@@ -245,6 +276,12 @@ footer
 .copyright
 {
     text-align: center;
+}
+
+/*-------------MESSAGE D'ERREUR-------------*/
+.errorMessage{
+    font-size: x-large;
+    color: darkred;
 }
 
 /*-------------PAGE ERROR-------------*/
