--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,51 +1,4 @@
-@font-face
-{
-    font-family: 'ralewaynormal';
-    src: url('font/Raleway-Light.ttf')format('truetype');
-    font-weight: normal;
-}
-
-ul
-{
-    list-style-type: none;
-}
-/*-------------TITLE CONFIGURATION-------------*/
-h1{
-    text-transform: uppercase;
-    text-align: center;
-}
-
-button
-{
-    font-size: 1.1em;
-    border: 0px;
-    width: 150px;
-    height: 43px;
-    text-align: center;
-    color: #000;
-    background: #CD853F;
-    border-radius: 8px;
-    text-shadow: 0px 1px 0px rgba( 255, 255, 255, 0.2);
-    box-shadow: 0 0 5px rgba( 0, 0, 0, 0.5),
-                 0 -1px 0 rgba( 255, 255, 255, 0.4);
-}
-button:hover
-{
-    color: #222;
-     background: #CD853F;
-
-}
-button:active
-{
-    color: #000;
-     background: #CD853F;
-
-     box-shadow: 1px 1px 10px black inset, 
-                 0 1px 0 rgba( 255, 255, 255, 0.4);
-}
-button a{
-    color: black;
-}
+/*-------------GENERAL CONFIGURATION-------------*/
 body
 {
     background-color: #5e5e5e;
@@ -58,7 +11,7 @@ header
 {
     position: fixed;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     top: 0px;
     left: 0px;
     right: 0px;
@@ -66,6 +19,84 @@ header
     height: 100px;
     background-color: #4e4e4e;
     z-index: 100;
+}
+
+@font-face
+{
+    font-family: 'ralewaynormal';
+    src: url('font/Raleway-Light.ttf')format('truetype');
+    font-weight: normal;
+}
+
+
+
+/*-------------TITLE CONFIGURATION-------------*/
+h1{
+    text-transform: uppercase;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: xx-large;
+}
+h2{
+    text-align: center;
+    font-size: x-large;
+    text-transform: uppercase;
+}
+h3{
+    font-size: 1.5em;
+    text-decoration: underline;
+    margin-bottom: 10px;
+}
+h4{
+    font-size: Large;
+    font-style: italic;
+    font-weight: lighter;
+}
+
+/*-------------BUTTON CONFIGURATION-------------*/
+.button, .adminDeletedButton, .adminModifyButton{
+    text-decoration: none;
+    font-weight: bold;
+    padding: 8px;
+    text-align: center;
+    color: #000;
+    background: #F5F5F5;
+    border-radius: 8px;
+    text-shadow: 0px 1px 0px rgba( 255, 255, 255, 0.2);
+    box-shadow: 0 0 5px rgba( 0, 0, 0, 0.5),
+                 0 -1px 0 rgba( 255, 255, 255, 0.4);
+}
+.button:hover, .adminDeletedButton:hover, .adminModifyButton{
+    color: #222;
+     background: #F5F5F5;
+
+}
+.button:active, .adminDeletedButton:active{
+    color: #000;
+     background: rgb#F5F5F5(199, 195, 191);
+
+     box-shadow: 1px 1px 10px black inset, 
+                 0 1px 0 rgba( 255, 255, 255, 0.4);
+}
+.button a, .adminDeletedButton a, .adminModifyButton a{
+    color: black;
+}
+.submitButton{
+    border:none;
+	padding:10px;
+	border-radius:8px;
+	background:rgb(156, 155, 154);
+	font:13px;
+    color:black;
+    cursor: pointer;
+}
+.submitButton:active{
+    color: #000;
+     background: rgb(156, 155, 154);
+
+     box-shadow: 1px 1px 10px black inset, 
+                 0 1px 0 rgba( 255, 255, 255, 0.4);
 }
 /*-------------CONTENT-------------*/
 #content
@@ -83,22 +114,19 @@ header
 }
 
 /*-------------FORMULAIRE-------------*/
-.form{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    width: 25%;
-    margin-left: 35%;
-}
-.formSubmit{
-    margin: 0 auto;
+.writeField, .submitField{
     padding: 10px 0px 10px 0px;
 }
-.field{
+.connexionForm{
     padding: 10px 0px 10px 0px;
 }
-
+.connexionForm input{
+    margin-top: 5px;
+}
 /*-------------TEMPLATE-------------*/
+header img{
+    padding-left: 100px;
+}
 .menuMember{
     display: none;
     background-color: #403d3d;
@@ -113,6 +141,7 @@ header
 }
 .nav-header >ul >li {
     padding-right: 15px;
+    text-align: center;
 }
 .triangle{
     width: 0;
@@ -123,39 +152,37 @@ header
     border-top: 10px solid #000;
     margin-top: 10px;
 }
-
-/*-------------HEADER-------------*/
-.logoHeader
-{
+ul{
+    list-style-type: none;
+}
+.logoHeader{
     height: 120px;
     width: 240px;
 }
 
-.nav-header
-{
-    width: 40%;
+.nav-header{
+    margin-right: 100px;
 }
 
-.nav-header > ul
-{
-    display: flex;
+.nav-header > ul{
     padding-top: 20px;
+    display: flex;
 }
 
-.nav-header a
-{
+.nav-header a{
    text-decoration: none;
    color: black;
    font-size: 1.3em;
 }
-
+li{
+    min-width: max-content;
+}
 /*-------------HOME PAGE-------------*/
 #slider{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-
 }
 #instruction
 {
@@ -172,39 +199,40 @@ header
     font-size: 50px;
 }
 #lastChapitre{
-
-    margin: 30px 0px 30px 0px;
+    margin-right: 20px;
 }
 #bio{
+    width: 70%;
+    margin: auto;
     border-top-style: double;
-    border-bottom-style: double;
     border-top-width: 6px;
-    border-bottom-width: 6px;
-    margin: 30px 20% 30px 20%;
+    
 }
-#showChapter
-{
+#showChapter{
     display: flex;
 }
 .partOfChapter, .chapter, .navChapter
 {
-    background-color: #DEB887;
-    width:33%;
-    margin: 8px;
-    padding: 8px;
+    background-color: #a3a2a2;
+    width: 33%;
+    margin: 0px 10px 30px 10px;
     border-radius: 0px 20px 0px 20px;
+    padding-bottom: 30px;
 }
 
 /*-------------PAGE BOOK-------------*/
 #showChapterBook{
     display: flex;
-    height: 1000px;
+
 }
 .completText{
     text-align: justify;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .chapter{
     width: 80%;
+    text-align: justify;
 }
 .navChapter{
     width: 20%;
@@ -215,75 +243,197 @@ header
     border-top-style: solid;
     border-top-width: 3px;
     padding-top: 12px;
+    margin: 10px;
 }
 .navChapter a{
     color : black;
     text-decoration: none;
 }
-
-.connexionForm{
-    padding: 50px 0px 50px 0px;
-}
-.connexionForm div{
-    padding-top: 10px;
-}
 #commentaire{
-    width: 40%;
+    width: 80%;
     margin: 0 auto;
+    padding: 50px 10px 10px 10px;
+    border-bottom: 3px solid black;
 }
 #commentaire a{
     color: darkred;
 }
 .containsComments{
-    border-top: 2px solid #a3a2a2;
-  
+    text-align: initial;
 }
-
-/*-------------adminCommentsView------------*/
-#administration{
-    background-color: whitesmoke;
+.comment{
+    font-size: large;
+}
+.report{
+    text-align: end;
+}
+#author{
+    text-align: center;
+    font-size: 1.1em;
+}
+#commentContent{
+    width: 75%;
+}
+.chapterNumber{
+    font-size: 1.1em;
+    text-align: start;
+    padding-left: 30px;
+}
+.publicationDate{
+    font-size: 1.1em;
+    text-align: end;
+    padding-right: 30px;
+}
+.chapter > p{
+    padding-left: 30px;
+    padding-right: 30px;
+}
+#commentWrite{
+    font-size: large;
+    margin-bottom: 30px;
+}
+.commentAuthor{
+    margin-bottom: 40px;
+}
+.commentAuthor label{
+    text-decoration: underline;
+}
+.commentAuthor input{
+    margin-top: 10px;
+}
+.commentContent{
+    margin-bottom: 30px;
+    
+}
+.commentContent label{
+    text-decoration: underline;
+}
+.commentContent textarea{
+    margin-top: 10px;
+    height: 100px;
+}
+.oneComment{
+    border-top: 3px solid black;
+}
+/*-------------PAGE BOOK-------------*/
+.loginTitle{
+    width: 90%;
+    margin: auto;
+    padding-top: 30px;
+}
+/*-------------ADMIN CHAPTER VIEW-----------*/
+.adminDisplayChapter{
+    color: black;
+    text-decoration: underline;
+}
+.navAdminHeader{
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+    margin-right:5px;
+    font-size:x-large;
+    text-align: center;
+}
+.navAdminHeader a{
+    text-decoration: none;
+    color: black;
+    margin: auto;
+}
+.welcomeSentence{
+    font-size: x-large;
+    text-align: center;
+    margin: auto;
+    text-decoration: none;
+    color: black;
 }
 
 table{
-    width: 100%;
+    width: 90%;
+    margin: auto;
     border-collapse: collapse;
 }
 table a{
     text-decoration: none;
 }
-table button{
-    background-color: #a3a2a2;
-}
-table button:hover{
-    background-color: darkred;
-}
 th, td{
     border-top: 2px solid #a3a2a2;
+    border-bottom: 2px solid #a3a2a2;
+    padding: 15px 0px 15px 0px;
+}
+#vueChapter{
+    margin: 15px;
+    text-align: justify;
+    background-color: #a3a2a2;
+    padding: 0px 10px;
 }
 
-/*-------------adminChaptersView------------*/
-#editChapter{
-    width: 80%;
+/*-------------ADMIN COMMENTS VIEW----------------*/
+.reportField a{
+    color: black;
+    text-decoration: underline;
+}
+#adminComment{
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+/*-------------ADMIN CREATE CHAPTER VIEW----------------*/
+.createChapter_fieldForm label{
+  margin-bottom: 15px;
+}
+
+.createChapter_fieldForm{
+   width: 60%;
+   margin: auto;
+   text-decoration: underline;
+   font-size: large;
+}
+.createChapter_chapterNumber, .createChapter_chapterName{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    flex-direction: column;
+}
+.createChapter_chapterNumber input{
+    width: 30px;
+    text-align: center;
+    margin: auto;
+}
+.createChapter_chapterContent{
+    margin: 30px;
+}
+.createChapter_submitButton{
+    margin-bottom: 20px;
 }
 /*-------------FOOTER-------------*/
 footer
 {
     display: flex;
     background-color: #4e4e4e;
-    position: absolute;
+    flex-direction: column;
 }
 
 #nav-footer
 {
     display: flex;
     justify-content: space-around;
+    text-decoration: none;
+}
+.plan a, .social a{
+    text-decoration: none;
+    color: black;
 }
 
 .copyright
 {
     text-align: center;
+    width:80%;
+    margin: auto;
+    margin-bottom: 30px;
 }
-
+#nav-footer li{
+    min-width: initial;
+}
 /*-------------MESSAGE D'ERREUR-------------*/
 .errorMessage{
     font-size: x-large;
@@ -295,4 +445,110 @@ footer
     font-size: x-large;
     text-transform: uppercase;
     padding-top: 24px;
+}
+
+/*-------------MEDIA QUERIES-------------*/
+
+@media (max-width: 575px){
+
+}
+
+/*Small devices (landscape phones, 576px and less)*/
+@media (max-width: 576px){
+    .logoHeader{
+        padding-left: 10px;
+        height: 100px;
+        width: 100px;
+    }
+    #bio{
+        width: 80%;
+        margin: auto;
+    }
+    #content h1, h3{
+        font-size: 1.3em;
+    }
+    .welcomeSentence{
+        width: 50%;
+        padding: 10px;
+    }
+    .adminDeletedButton, .adminModifyButton{
+        padding: 2px;
+    }
+    
+}
+
+/*Medium devices (tablets, 768px and less)*/
+@media (max-width: 768px){ 
+    .nav-header{
+        width: auto;
+    }
+    .nav-header > ul{
+        font-size: 0.9em;
+    }
+    #instruction{
+        display: none;
+    }
+    table{
+        font-size: x-small;
+    }
+  
+    .createChapter_chapterNumber input{
+      margin: auto;
+    }
+   
+}
+
+
+/*Large devices (desktops, 992px and less)*/
+@media (max-width: 992px){
+    .nav-header > ul{
+        padding-top: 0px;
+        display: block;
+    }
+    .triangle{
+        display: none;
+    }
+    #instruction{
+        margin-top: 50px;
+    }
+    #showChapter{
+        flex-direction: column;
+        display: flex;
+    }
+    .partOfChapter{
+        width: 100%;
+        height: auto;
+    }
+    #showChapterBook{
+        flex-direction: column;
+        width: 97%;
+    }
+    .chapter, .navChapter{
+       width: 100%;
+        margin: 10px;
+        padding: 0px;
+    }
+    .navChapter h4{
+        margin: 0px 20px 0px 20px;
+        font-style: normal;
+    }
+    .navAdminHeader {
+        font-size: small;
+    }
+    .welcomeSentence{
+        font-size: large;
+    }
+    table{
+        font-size: small;
+    }
+}
+@media (max-width: 1400px){
+    .navAdminHeader{
+        flex-direction: column;
+    }
+}
+
+/*Extra large devices (large desktops, 1200px and up)*/
+@media (max-width: 1200px){
+
 }
